<resources>
    <string name="app_name">BookHub2</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashborad_fragment">Dashborad Fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_fragment">About Fragment</string>
    <string name="tony_stark">Tony Stark</string>
    <string name="email">Email</string>
    <string name="tony_starkindustry_com">tony@starkindustry.com</string>
    <string name="phone_no">Phone No</string>
    <string name="_919971114686">+919971114686</string>
    <string name="list_item">List Item</string>
    <string name="name_of_author">Name of Author</string>
    <string name="rs_299">Rs. 299</string>
    <string name="_4_5">4.5</string>
    <string name="click_here">Click Here</string>
    <string name="name_of_the_book">Name of the Book</string>
    <string name="r_299">R. 299</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="action_sort">Sort</string>
</resources>