<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/tony_stark_new"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/purple_500"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:textSize="20sp"
        android:text="@string/tony_stark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_email"
        android:padding="6dp"
        android:layout_below="@+id/txtName"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/txtEamilId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/txtEmail"
        android:text="@string/tony_starkindustry_com"
        android:layout_below="@+id/txtName"
        android:textSize="18sp"
        android:padding="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="60dp"/>
    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:drawableLeft="@drawable/ic_phone_call"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/txtPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEamilId"
        android:layout_toRightOf="@+id/txtPhone"
        android:layout_marginLeft="60dp"
        android:text="@string/_919971114686"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>
</RelativeLayout>