<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BookDescription">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="#EE6c00"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="Book Description"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llcontent"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:weightSum="6"
                android:orientation="horizontal">
               <ImageView
                   android:id="@+id/imgBook"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1.5"
                   android:scaleType="centerCrop"
                   android:padding="6dp"
                   android:src="@drawable/default_book_cover"/>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">
                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_book"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="4dp"/>
                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_book"
                        android:layout_below="@+id/txtBookName"
                        android:textSize="16sp"
                        android:padding="4dp"/>
                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r_299"
                        android:layout_below="@id/txtBookAuthor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="4dp"
                        android:textColor="#357a38"/>

                </RelativeLayout>
                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:drawableLeft="@drawable/ic_start"
                    android:text="@string/_4_5"
                    android:textColor="#ffca28"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="4dp"/>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/llcontent"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/txtAboutBookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/name_of_the_book"
                    android:layout_centerHorizontal="true"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txtBookDes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/txtAboutBookName"
                    android:layout_marginTop="10dp"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="#000000" />


            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
    <Button
        android:id="@+id/btnAddtoFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:padding="4dp"
        android:text="@string/add_to_favorites"
        android:textSize="19sp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>